--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="St.Peter's ACK Church"
+      content="ACK St.Peter's Embakasi Church website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>St.Peter's ACK Church.org</title>
+    <title>ACK St.Peter's Embakasi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
